# UC_SmartFarmRadar

./: .gitignore  LICENSE  README.md  atajo_comandos.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ptu_package/share/ptu_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ptu_routine/lib/ptu_routine/: ptu_routine_node
install/ptu_routine/share/ptu_routine/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/radar_msg/include/radar_msg/radar_msg/msg/: rosidl_generator_cpp__visibility_control.hpp
install/radar_msg/include/radar_msg/radar_msg/msg/detail/: radar_data__rosidl_typesupport_fastrtps_c.h  (+1 more)
install/radar_msg/lib/radar_msg/: subscribe_radar_data.py
install/radar_msg/share/ament_index/resource_index/package_run_dependencies/: radar_msg
install/radar_msg/share/ament_index/resource_index/rosidl_interfaces/: radar_msg
install/radar_msg/share/radar_msg/: local_setup.sh  package.dsv  package.ps1  package.sh
install/radar_msg/share/radar_msg/cmake/: ament_cmake_export_libraries-extras.cmake  export_radar_msg__rosidl_generator_cppExport.cmake  export_radar_msg__rosidl_generator_pyExport-noconfig.cmake  export_radar_msg__rosidl_generator_pyExport.cmake  radar_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/radar_msg/share/radar_msg/environment/: ament_prefix_path.sh  path.sh
log/: latest_build
magister_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
magister_ws/install/ptu_controller/lib/ptu_controller/: ptu_controller
magister_ws/install/ptu_controller/share/ptu_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
magister_ws/install/radar_msg/share/radar_msg/: local_setup.sh  package.bash  package.sh  package.zsh
magister_ws/install/radar_msg/share/radar_msg/cmake/: export_radar_msg__rosidl_generator_cExport-noconfig.cmake  export_radar_msg__rosidl_generator_cExport.cmake  export_radar_msg__rosidl_typesupport_fastrtps_cExport.cmake  radar_msg__rosidl_typesupport_cExport-noconfig.cmake  radar_msg__rosidl_typesupport_cppExport-noconfig.cmake  radar_msg__rosidl_typesupport_introspection_cppExport.cmake
magister_ws/install/radar_package/lib/radar_package/: process_data
magister_ws/install/radar_package/share/radar_package/: package.sh
magister_ws/log/: latest_build
magister_ws/src/ptu_controller/: setup.cfg  setup.py
magister_ws/src/ptu_controller/ptu_controller/: controlador.py
magister_ws/src/radar_msg/: CMakeLists.txt  package.xml  setup.py
magister_ws/src/radar_package/: package.xml  setup.py
magister_ws/src/radar_package/radar_package/: __init__.py  gain_cal_val.pkl  process_data.py  radar_node.py
ptu_controller/: package.xml
ptu_controller/ptu_controller/: controlador.py
ptu_package/: CMakeLists.txt
ptu_package/include/ptu_package/: ptu_node.hpp
ptu_package/src/: ptu_node.cpp
ptu_routine/: package.xml  setup.cfg  setup.py
ptu_routine/ptu_routine/: ptu_routine_node.py
radar_msg/: CMakeLists.txt  package.xml  setup.py
radar_msg/action/: Beamform.action  NextPose.action  PtuSweep.action
radar_msg/msg/: RadarCartesian.msg
radar_msg/scripts/: publish_radar_data.py
radar_package/: package.xml  setup.py
radar_package/launch/: launch.py
radar_package/radar_package/: channel_cal_val.pkl  config_radar.py  data_processing_node.py  mapa_cartesiano.py  mosaic.py  parametros.py  phase_cal_val.pkl  process_data.py  process_data_node.py  radar_node.py  radar_sync_node.py  target_detection_dbfs.py  visualizacion.py
state_machine/: package.xml  setup.py
state_machine/state_machine/: state_machine.py
(+17 files in other folders)
