<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_package</name>
  <version>0.0.0</version>
  <description>Paquete ROS 2 para control de radar phased-array y publicación/subscripción de datos RadarData</description>
  <maintainer email="dammr@uc.cl">Diego Muñoz Rojas</maintainer>
  <license>TODO: License declaration</license>

   <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>radar_msg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
